--- a/static/html/cookiead.html
+++ b/static/html/cookiead.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Privacy Sandbox demo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./static/css/main.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="">
         <!-- header -->
@@ -25,12 +24,15 @@
         <div class="border-4 border-black mx-4 mt-2 text-center py-4 px-12">
             <h1 class="text-5xl">This is a travel website.(using cookies)</h1>
             <p class="text-xl my-2">
-                This is an advertiser webisite. <br/>
-                When you visit this page, cookies are loaded in your browser and your information is stored in the cookies.
-                If you go this <a href="cookiead2" class="underline">page</a>, your information will be sent to advertiser servers, using cookie data.
+                This is an advertiser webisite. <br />
+                When you visit this page, cookies are loaded in your browser and your information is stored in the
+                cookies.
+                If you go this <a href="cookiead2" class="underline">page</a>, your information will be sent to
+                advertiser servers, using cookie data.
                 Subsequently, the advertiser will show info based on your data.
             </p>
         </div>
     </div>
 </body>
+
 </html>
