--- a/static/html/cookiead2.html
+++ b/static/html/cookiead2.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Privacy Sandbox demo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./static/css/main.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="">
         <!-- header -->
@@ -23,18 +22,19 @@
         </div>
         <!-- top card -->
         <div class="border-4 border-black mx-4 mt-2 text-center py-4 px-12">
-            <h1 class="text-5xl">This is a news website (using cookies publisher)</h1>
+            <h1 class="text-5xl">This is a news website (using cookies publisher[DSP - Demand Supply Side])</h1>
             <p class="text-xl my-2">
                 After visiting the travel website (using cookies), your information will be used to show the ad below.
+                navigator.runAdAuction is called
             </p>
         </div>
         <div class="flex items-start justify-between text-center m-4">
             <div class="w-2/3 p-2 border-4 border-black">
                 <p class="text-4xl">BREAKING NEWS!</p>
                 <div class="flex items-center">
-                    <img src="./static/assets/whitehouse.png" class="w-1/2 p-2"/>
+                    <img src="./static/assets/whitehouse.png" class="w-1/2 p-2" />
                     <div class="w-1/2 p-2 text-xl">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis, sem quis dignissim maximus, augue tortor suscipit dui, eu dignissim magna quam et velit. Pellentesque facilisis quis nunc et condimentum. Phasellus vel blandit velit. Aenean hendrerit molestie mi, 
+                        NEWS.....NEWS
                     </div>
                 </div>
             </div>
@@ -44,4 +44,5 @@
         </div>
     </div>
 </body>
+
 </html>
