--- a/static/html/publisher.html
+++ b/static/html/publisher.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Privacy Sandbox demo</title>
     <script src="./static/js/runAdAuction.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./static/css/main.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="">
         <!-- header -->
@@ -24,22 +23,21 @@
         <div class="border-4 border-black mx-4 mt-2 text-center py-4 px-12">
             <h1 class="text-5xl">This is a news website(publisher)</h1>
             <p class="text-xl my-2">
-                After visiting either <a class="underline" href="/advertiser2">the cafe page</a> or <a class="underline" href="/">the travel page</a>, 
+                After visiting either <a class="underline" href="/advertiser2">the cafe page</a> or <a class="underline"
+                    href="/">the travel page</a>,
                 you can see an ad of the interest group you joined on the right bottom of this page.
                 The ad auction was executed on your device and the ad was displayed with fencedframe tag.
-                In this way DSP won't be able to track. <br/>
-                Also you can see the log of the ReportWin() and ReportResult() on the Console tab of Chrome DevTools. <br/>
-                If an ad is not showing up on your page, make sure that you have followed the instructions in the README.md file.
-                </a>
+                In this way DSP won't be able to track. <br /> (navigator.runAdAuction is called here)
+                Also you can see the log of the ReportWin() and ReportResult() on the Console tab of Chrome DevTools.
             </p>
         </div>
         <div class="flex items-start justify-between text-center m-4">
             <div class="w-2/3 p-2 border-4 border-black">
                 <p class="text-4xl">BREAKING NEWS!</p>
                 <div class="flex items-center">
-                    <img src="./static/assets/whitehouse.png" class="w-1/2 p-2"/>
+                    <img src="./static/assets/whitehouse.png" class="w-1/2 p-2" />
                     <div class="w-1/2 p-2 text-xl">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis, sem quis dignissim maximus, augue tortor suscipit dui, eu dignissim magna quam et velit. Pellentesque facilisis quis nunc et condimentum. Phasellus vel blandit velit. Aenean hendrerit molestie mi, 
+                        NEWS NEWS NEWS
                     </div>
                 </div>
             </div>
@@ -50,4 +48,5 @@
         </div>
     </div>
 </body>
+
 </html>
