--- a/static/html/advertiser2.html
+++ b/static/html/advertiser2.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Privacy Sandbox demo</title>
     <script src="./static/js/joinAdInterestGroup2.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./static/css/main.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="">
         <!-- header -->
@@ -23,25 +22,28 @@
         <!-- top card -->
         <div class="border-4 border-black mx-4 mt-2 text-center py-4 px-12">
             <h1 class="text-5xl">This is a cafe website.(advertiser)</h1>
-            <p class="text-xl my-2">This is an advertiser webisite. <br/>
-                When you visit this page, you automatically join a <span class="font-bold text-red-700">"cafe"</span> interest group.
-                After visiting this page, you can see an ad of this interest group on <a href="/publisher" class="underline">the publisher website.</a>
+            <p class="text-xl my-2">This is an advertiser webisite. <br />
+                When you visit this page, you automatically join a <span class="font-bold text-red-700">"cafe"</span>
+                interest group.
+                After visiting this page, you can see an ad of this interest group on <a href="/publisher"
+                    class="underline">the publisher website.</a>
                 Also, you can check the current interest groups you are in on the Application tab of Chrome DevTools.
         </div>
         <div class="flex items-center justify-between text-center px-2">
             <div class="w-1/3 p-2">
                 <p class="text-2xl">Menu</p>
-                <img src="./static/assets/cafe1.png" class="w-full"/>
+                <img src="./static/assets/cafe1.png" class="w-full" />
             </div>
             <div class="w-1/3 p-2">
                 <p class="text-2xl">Access</p>
-                <img src="./static/assets/cafe2.png" class="w-full"/>
+                <img src="./static/assets/cafe2.png" class="w-full" />
             </div>
             <div class="w-1/3 p-2">
                 <p class="text-2xl">About</p>
-                <img src="./static/assets/cafe3.png" class="w-full"/>
+                <img src="./static/assets/cafe3.png" class="w-full" />
             </div>
         </div>
     </div>
 </body>
+
 </html>
