--- a/static/html/index.html
+++ b/static/html/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Privacy Sandbox demo</title>
     <script src="./static/js/joinAdInterestGroup.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./static/css/main.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="">
         <!-- header -->
@@ -24,28 +23,31 @@
         </div>
         <!-- top card -->
         <div class="border-4 border-black mx-4 mt-2 text-center py-4 px-12">
-            <h1 class="text-5xl">This is a travel website.(advertiser)</h1>
+            <h1 class="text-5xl">Travel website.(Advertiser [Buyer][DSP])</h1>
             <p class="text-xl my-2">
-                This is an advertiser webisite. <br/>
-                When you visit this page, you automatically join a <span class="font-bold text-red-700">"travel"</span> interest group.
-                After visiting this page, you can see an ad of this interest group on <a href="/publisher" class="underline">the publisher website.</a>
+                This is an advertiser webisite. <br />
+                When you visit this page, you automatically join a "travel" interest group
+                interest group. (navigator.joinAdInterestGroup is called)
+                After visiting this page, you can see an ad of this interest group on <a href="/publisher"
+                    class="underline">the publisher website.</a>
                 Also, you can check the current interest groups you are in on the Application tab of Chrome DevTools.
             </p>
         </div>
         <div class="flex items-center justify-between text-center px-2">
             <div class="w-1/3 p-2">
                 <p class="text-2xl">Tokyo</p>
-                <img src="./static/assets/tokyo.png" class="w-full"/>
+                <img src="./static/assets/tokyo.png" class="w-full" />
             </div>
             <div class="w-1/3 p-2">
                 <p class="text-2xl">Paris</p>
-                <img src="./static/assets/paris.png" class="w-full"/>
+                <img src="./static/assets/paris.png" class="w-full" />
             </div>
             <div class="w-1/3 p-2">
                 <p class="text-2xl">New York</p>
-                <img src="./static/assets/ny.png" class="w-full"/>
+                <img src="./static/assets/ny.png" class="w-full" />
             </div>
         </div>
     </div>
 </body>
+
 </html>
