added cookie ad

--- a/static/html/cookiead.html
+++ b/static/html/cookiead.html
@@ -26,7 +26,7 @@
             <p class="text-xl my-2">
                 This is an advertiser webisite. <br />
                 When you visit this page, cookies are loaded in your browser and your information is stored in the
-                cookies.
+                cookies.<br/>
                 If you go this <a href="cookiead2" class="underline">page</a>, your information will be sent to
                 advertiser servers, using cookie data.
                 Subsequently, the advertiser will show info based on your data.
