--- a/static/html/cookiead2.html
+++ b/static/html/cookiead2.html
@@ -40,6 +40,9 @@
             </div>
             <div class="w-1/3 border-4 border-red-700 ml-2">
                 <p class="text-2xl text-red-700">Ad</p>
+                <div class="flex items-center">
+                    <img src="./static/assets/travelad.png" class="w-1/2 p-2" />
+                </div>
             </div>
         </div>
     </div>
