dynamic ads added

--- a/static/html/advertiser2.html
+++ b/static/html/advertiser2.html
@@ -17,6 +17,9 @@
                 <a href="/" class="mx-2 underline">advertiser1(travel)</a>
                 <a href="/advertiser2" class="mx-2 underline">advertiser2(cafe)</a>
                 <a href="/publisher" class="mx-2 underline">publisher</a>
+                <a href="/travel-cookie" class="mx-2 underline">Travel Website (using cookies)</a>
+                <a href="/cafe-cookie" class="mx-2 underline">Cafe Website (using cookies)</a>
+                <a href="/news-cookie" class="mx-2 underline">News website</a>
             </div>
         </div>
         <!-- top card -->
