--- a/static/html/cookie_ad_travel.html
+++ b/static/html/cookie_ad_travel.html
@@ -16,16 +16,17 @@
                 <a href="/" class="mx-2 underline">advertiser1(travel)</a>
                 <a href="/advertiser2" class="mx-2 underline">advertiser2(cafe)</a>
                 <a href="/publisher" class="mx-2 underline">publisher</a>
-                <a href="/cookiead" class="mx-2 underline">advertiser 1 (Travel - cookie)</a>
-                <a href="/cookiead2" class="mx-2 underline">Publisher - Cookie</a>
+                <a href="/travel-cookie" class="mx-2 underline">Travel Website (using cookies)</a>
+                <a href="/cafe-cookie" class="mx-2 underline">Cafe Website (using cookies)</a>
+                <a href="/news-cookie" class="mx-2 underline">News website</a>
             </div>
         </div>
         <!-- top card -->
         <div class="border-4 border-black mx-4 mt-2 text-center py-4 px-12">
-            <h1 class="text-5xl">This is a news website (using cookies publisher[DSP - Demand Supply Side])</h1>
+            <h1 class="text-5xl">This is a news website (using cookies publisher [DSP - Demand Supply Side])</h1>
             <p class="text-xl my-2">
                 After visiting the travel website (using cookies), your information will be used to show the ad below.
-                navigator.runAdAuction is called
+                navigator.
             </p>
         </div>
         <div class="flex items-start justify-between text-center m-4">
