--- a/static/html/travel_cookie.html
+++ b/static/html/travel_cookie.html
@@ -16,18 +16,19 @@
                 <a href="/" class="mx-2 underline">advertiser1(travel)</a>
                 <a href="/advertiser2" class="mx-2 underline">advertiser2(cafe)</a>
                 <a href="/publisher" class="mx-2 underline">publisher</a>
-                <a href="/cookiead" class="mx-2 underline">Cookie Link 1</a>
-                <a href="/cookiead2" class="mx-2 underline">Cookit Link 2</a>
+                <a href="/travel-cookie" class="mx-2 underline">Travel Website (using cookies)</a>
+                <a href="/cafe-cookie" class="mx-2 underline">Cafe Website (using cookies)</a>
+                <a href="/news-cookie" class="mx-2 underline">News website</a>
             </div>
         </div>
         <!-- top card -->
         <div class="border-4 border-black mx-4 mt-2 text-center py-4 px-12">
-            <h1 class="text-5xl">This is a travel website.(using cookies)</h1>
+            <h1 class="text-5xl">This is a travel website. (using cookies)</h1>
             <p class="text-xl my-2">
                 This is an advertiser webisite. <br />
                 When you visit this page, cookies are loaded in your browser and your information is stored in the
                 cookies.<br/>
-                If you go this <a href="cookiead2" class="underline">page</a>, your information will be sent to
+                If you go this <a href="news-cookie" class="underline">page</a>, your information will be sent to
                 advertiser servers, using cookie data.
                 Subsequently, the advertiser will show info based on your data.
             </p>
